# Ecommerce-APIs-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  project_description.txt  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/api/: router.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  admin.py  auth.py  cart.py  categories.py  health.py  orders.py  products.py  users.py
app/core/: __init__.py  config.py  dependencies.py  logging.py  security.py
app/db/: base.py  session.py
app/events/: __init__.py  lifespan.py
app/exceptions/: __init__.py  errors.py  handlers.py
app/middleware/: auth.py  logging.py
app/models/: __init__.py  cart.py  category.py  inventory.py  order.py  product.py  user.py
app/repositories/: base.py  cart_repository.py  category_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: auth.py  cart.py  category.py  common.py  inventory.py  order.py  product.py  user.py
app/services/: admin.py  auth.py  cart.py  inventory.py  order.py  product.py  user.py
app/utils/: cache.py  pagination.py
infra/: README.md
tests/: conftest.py
tests/unit/: test_placeholder.py
